chore(convert): [CVT-2353] Fix issue with wrong spacing (#4871)

--- a/src/pages/convert/campaigns/providers/CampaignDetailsForm/style.less
+++ b/src/pages/convert/campaigns/providers/CampaignDetailsForm/style.less
@@ -23,7 +23,7 @@
     }
 
     .bannerWrapper {
-        padding: 0 @layout-spacing-l @layout-spacing-l;
+        padding-bottom: @layout-spacing-l;
     }
 
     .formWrapper {
